// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[archer] 1`] = `
{
  "accRating": 80.925,
  "accuracyPct": 35,
  "allStatTotal": 263,
  "atk": 83,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 8.6,
  "critMult": 1.5550299513149461,
  "critResistPct": 1.5,
  "def": 10,
  "dexStat": 148,
  "evaRating": 76.5,
  "evasionPct": 75,
  "extraAttackChancePct": 68.3,
  "healMult": 1.1500000000000001,
  "hp": 685,
  "intStat": 15,
  "lukStat": 55,
  "magicAtk": 17,
  "magicDef": 14,
  "magicMinDamage": 3,
  "maxHp": 685,
  "maxMp": 227,
  "minDamage": 3,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 136.6,
  "spiStat": 15,
  "strStat": 15,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[lowbie] 1`] = `
{
  "accRating": 35.375,
  "accuracyPct": 35,
  "allStatTotal": 100,
  "atk": 24,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.4604255649461715,
  "critResistPct": 1.5,
  "def": 10,
  "dexStat": 15,
  "evaRating": 0,
  "evasionPct": 0,
  "extraAttackChancePct": 7.125,
  "healMult": 1.1500000000000001,
  "hp": 245,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 17,
  "magicDef": 14,
  "magicMinDamage": 3,
  "maxHp": 245,
  "maxMp": 92,
  "minDamage": 4,
  "mp": 92,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 14.25,
  "spiStat": 15,
  "strStat": 25,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[mage] 1`] = `
{
  "accRating": 49.925,
  "accuracyPct": 35,
  "allStatTotal": 253,
  "atk": 17,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.45280302180028,
  "critResistPct": 4.5,
  "def": 10,
  "dexStat": 15,
  "displayAttack": "magic",
  "evaRating": 0,
  "evasionPct": 0,
  "extraAttackChancePct": 7.125,
  "healMult": 1.33,
  "hp": 685,
  "intStat": 148,
  "lukStat": 15,
  "magicAtk": 123,
  "magicDef": 43,
  "magicMinDamage": 25,
  "maxHp": 685,
  "maxMp": 501,
  "minDamage": 3,
  "mp": 501,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 14.25,
  "spiStat": 45,
  "strStat": 15,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[ninja] 1`] = `
{
  "accRating": 50.125,
  "accuracyPct": 35,
  "allStatTotal": 255,
  "atk": 36,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 16.2,
  "critMult": 1.7329671756295133,
  "critResistPct": 1.5,
  "def": 10,
  "dexStat": 60,
  "evaRating": 52.5,
  "evasionPct": 52.5,
  "extraAttackChancePct": 28.5,
  "healMult": 1.1500000000000001,
  "hp": 685,
  "intStat": 15,
  "lukStat": 135,
  "magicAtk": 17,
  "magicDef": 14,
  "magicMinDamage": 3,
  "maxHp": 685,
  "maxMp": 227,
  "minDamage": 3,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 57,
  "spiStat": 15,
  "strStat": 15,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[tank] 1`] = `
{
  "accRating": 37.375,
  "accuracyPct": 35,
  "allStatTotal": 275,
  "atk": 53,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.4755190439471157,
  "critResistPct": 1.5,
  "def": 72,
  "dexStat": 15,
  "evaRating": 0,
  "evasionPct": 0,
  "extraAttackChancePct": 4.625,
  "healMult": 1.7700000000000002,
  "hp": 1220,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 17,
  "magicDef": 14,
  "magicMinDamage": 3,
  "maxHp": 1220,
  "maxMp": 227,
  "minDamage": 15,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 9.25,
  "spiStat": 15,
  "strStat": 45,
  "vitStat": 170,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[warrior] 1`] = `
{
  "accRating": 47.675,
  "accuracyPct": 35,
  "allStatTotal": 263,
  "atk": 133,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.5501420281376743,
  "critResistPct": 1.5,
  "def": 32,
  "dexStat": 15,
  "evaRating": 0,
  "evasionPct": 0,
  "extraAttackChancePct": 1.625,
  "healMult": 1.31,
  "hp": 978,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 17,
  "magicDef": 14,
  "magicMinDamage": 3,
  "maxHp": 978,
  "maxMp": 227,
  "minDamage": 24,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 3.25,
  "spiStat": 15,
  "strStat": 148,
  "vitStat": 55,
}
`;

exports[`골든: resolveBattle PvE 지문 (엔진 가드) > PvE 지문 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "warrior_vs_들개",
    "logSha": "b34cb6e80f70746d5eba7645d0e01fa831135422",
    "outcome": "win",
    "playerHp": 975,
    "playerMp": 227,
    "turns": 7,
  },
  {
    "enemyHp": 0,
    "label": "warrior_vs_골렘",
    "logSha": "28f33cd00d21840ddaed608d606a0c570b0fc7e1",
    "outcome": "win",
    "playerHp": 978,
    "playerMp": 227,
    "turns": 8,
  },
  {
    "enemyHp": 0,
    "label": "ninja_crit_vs_늑대",
    "logSha": "a9f3d37363e55472fa0e39d884488cebfda3880d",
    "outcome": "win",
    "playerHp": 670,
    "playerMp": 227,
    "turns": 35,
  },
  {
    "enemyHp": 0,
    "label": "archer_pen_vs_골렘",
    "logSha": "332b708e043363a22fa8845d9573163ddc783ba6",
    "outcome": "win",
    "playerHp": 684,
    "playerMp": 227,
    "turns": 13,
  },
  {
    "enemyHp": 0,
    "label": "magic_vs_약탈자",
    "logSha": "530e4701961e15b4878fb378b34f8129b55664d6",
    "outcome": "win",
    "playerHp": 637,
    "playerMp": 501,
    "turns": 15,
  },
  {
    "enemyHp": 0,
    "label": "counter_tank_vs_들소",
    "logSha": "fadffce3792aa20f98225076aca20512efa16e5f",
    "outcome": "win",
    "playerHp": 1099,
    "playerMp": 227,
    "turns": 28,
  },
  {
    "enemyHp": 0,
    "label": "heal_vs_들소_boss",
    "logSha": "858d3203f5a4ce140a780beb5a62ff47088f2705",
    "outcome": "win",
    "playerHp": 1198,
    "playerMp": 227,
    "turns": 46,
  },
  {
    "enemyHp": 0,
    "label": "mage_skills_vs_골렘",
    "logSha": "95d6f874f16b970c05f3d30f78143b5b6febf783",
    "outcome": "win",
    "playerHp": 672,
    "playerMp": 501,
    "turns": 12,
  },
  {
    "enemyHp": 0,
    "label": "lowbie_vs_들개",
    "logSha": "3b55206ab4f50e4fc78cf20098a17e373219f6db",
    "outcome": "win",
    "playerHp": 242,
    "playerMp": 92,
    "turns": 10,
  },
]
`;

exports[`골든: resolveBattlePvP 지문 (PvP 엔진 가드) > PvP 지문 매트릭스 1`] = `
[
  {
    "label": "warrior_vs_mage",
    "logSha": "da258feb3d2b95d70eb0d2a69458051805773ffc",
    "outcome": "p1_win",
    "turns": 33,
  },
  {
    "label": "archer_vs_ninja",
    "logSha": "ed95be09e6c38c35089ae697c6f556cf1243ccaf",
    "outcome": "p1_win",
    "turns": 80,
  },
  {
    "label": "tank_vs_warrior",
    "logSha": "b1e7a6017c795d0e3fb492b93cc5f91501c3231a",
    "outcome": "p2_win",
    "turns": 82,
  },
]
`;

exports[`골든: 적 페이즈 메커닉 커버리지 (리팩터 가드) > 적 페이즈 메커닉 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "enemy_dot_tick",
    "logSha": "6f21631bfeb1c6208fb39c3f1e7a273a947def6e",
    "outcome": "win",
    "playerHp": 966,
    "playerMp": 227,
    "turns": 12,
  },
  {
    "enemyHp": 0,
    "label": "chill_enemy",
    "logSha": "a14b7e1d6b8ff6e6b248fc2a5375cd6fbcbfecc2",
    "outcome": "win",
    "playerHp": 1148,
    "playerMp": 227,
    "turns": 21,
  },
  {
    "enemyHp": 0,
    "label": "thorns_reflect",
    "logSha": "301ca7fdaf792b34bc548b28196794df0af37d32",
    "outcome": "win",
    "playerHp": 1199,
    "playerMp": 227,
    "turns": 24,
  },
  {
    "enemyHp": 0,
    "label": "evade_reflect",
    "logSha": "a5b9972f4bfb6a61dc369c770813dd10a41f8f99",
    "outcome": "win",
    "playerHp": 668,
    "playerMp": 227,
    "turns": 69,
  },
  {
    "enemyHp": 0,
    "label": "enrage_enemy",
    "logSha": "2fe8ecc761313509c8168b0736aef94b0da33dfe",
    "outcome": "win",
    "playerHp": 956,
    "playerMp": 227,
    "turns": 12,
  },
  {
    "enemyHp": 0,
    "label": "brace_enemy",
    "logSha": "e760b49de296180f7c9dce40eec9e75000bee470",
    "outcome": "win",
    "playerHp": 966,
    "playerMp": 227,
    "turns": 12,
  },
  {
    "enemyHp": 0,
    "label": "heavyblow_enemy",
    "logSha": "6c6934ad4886234ea9308509be44d42bb325d9e5",
    "outcome": "win",
    "playerHp": 1000,
    "playerMp": 227,
    "turns": 37,
  },
]
`;
